Debug nome file immagine

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <table>
     <tr>
-      <td><img src="images/pino.png" alt="profilo di Pino Omodei su Facebook" height="200" width="200"></td>
+      <td><img src="images/Pino.png" alt="profilo di Pino Omodei su Facebook" height="200" width="200"></td>
       <td>
         <h1>Pino Omodei Salè</h1>
         <p><em>Direttore sviluppi applicativi presso <strong><a href="https://www.messaggerielibri.it">Messaggerie Libri</a></strong>.</em></p>
